tests/ui/fmt/format-raw-string-error.stderr
error: invalid format string: unmatched `}` found
  --> $DIR/format-raw-string-error.rs:2:45
   |
LL |     println!(r#"\'\'\'\'\'\'\'\'\'\'\'\'\'\'}"#);
   |                                             ^ unmatched `}` in format string
   |
   = note: if you intended to print `}`, you can escape it using `}}`

error: aborting due to 1 previous error

